2011-09-13  Fumitoshi Ukai  <ukai@chromium.org>

        Unreviewed, update chromium test expectations

        * platform/chromium/test_expectations.txt: fast/borders/border-image-omit-right-slice.html fails on release

2011-09-13  Renata Hodovan  <reni@webkit.org>

        eventSender.keyDown is unimplemented (WKTR)
        https://bugs.webkit.org/show_bug.cgi?id=57515

        Unreviewed gardening.

        * platform/qt-wk2/Skipped:

2011-09-12  Shinya Kawanaka  <shinyak@google.com>

        [chromium] fast/js/parseInt.html does not fail any more.
        https://bugs.webkit.org/show_bug.cgi?id=65366

        parseInt bug was fixed in v8 version 3.6.0.

        Reviewed by Eric Seidel.

        * platform/chromium/test_expectations.txt:

2011-09-12  Dominic Mazzoni  <dmazzoni@google.com>

        Add a test that ensures that the accessibility tree
        does not contain duplicate child nodes.
        https://bugs.webkit.org/show_bug.cgi?id=58930

        This test failed when the bug was originally filed, but was
        fixed in: https://bugs.webkit.org/show_bug.cgi?id=61805
        so no code changes are accompanying this new layout test.

        Reviewed by Chris Fleizach.

        * accessibility/duplicate-child-nodes-expected.txt: Added.
        * accessibility/duplicate-child-nodes.html: Added.

2011-09-12  Shinya Kawanaka  <shinyak@google.com>

        Crashes in WebCore::InsertListCommand::unlistifyParagraph.
        https://bugs.webkit.org/show_bug.cgi?id=67918

        Reviewed by Ryosuke Niwa.

        Added tests.

        * editing/execCommand/insert-list-in-noneditable-list-parent-expected.txt: Added.
        * editing/execCommand/insert-list-in-noneditable-list-parent.html: Added.

2011-09-12  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r94975.
        http://trac.webkit.org/changeset/94975
        https://bugs.webkit.org/show_bug.cgi?id=67984
