@@ -1,0 +1,13 @@
+<html>
+<head>
+    <script>
+        onload = function()
+        {
+            parent.postMessage("finishedLoad", "*");
+        }
+    </script>
+</head>
+<body>
+    Body
+</body>
+</html>
